# Asteroids

./: Asteroids.cabal  CHANGELOG.md  LICENSE  readme.md
Score/: Highscores.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/environment.-62100/: .ghc.environment.x86_64-mingw32-9.4.8
src/: Animation.hs  Config.hs  Controller.hs  CreateEnemy.hs  Entities.hs  Input.hs  LevelLoader.hs  Main.hs  Menu's.hs  Methods.hs  Model.hs  Toolbox.hs  View.hs
src/Controller/: Controller.hs  GameFunctions.hs  Inputs.hs
src/Entities/: Asteroid.hs  Bullets.hs  Entity.hs  PowerUp.hs  Ship.hs  Stats.hs
src/Levels/: Lvl.txt  Lvl1.txt  Lvl2.txt  Lvl3.txt  PlaceholderEmptyLvl.txt
src/Objects/: Menu's.hs
src/Objects/Entities/: Asteroid.hs  Bullets.hs  Entity.hs  Missile.hs  PowerUp.hs  Ship.hs  Stats.hs
src/Score/: Score.hs
src/View/: Draw.hs  View.hs
