name:                Asteroids
version:             0.1.0.0
author:              Marcus Vasques, Reinout Bosgraaf
maintainer:          x
category:            Game
build-type:          Simple
cabal-version:       >=1.10


executable gloss-counter
  main-is:             Main.hs
  build-depends:       base >= 4 && < 5, gloss, random
  hs-source-dirs:      src
  other-modules:       Controller.Controller, Controller.Inputs, Controller.GameFunctions, Model, View, Objects.Entities.Entity, Objects.Entities.Ship, Objects.Entities.Asteroid, Objects.Entities.Stats, Objects.Entities.Bullets, Objects.Entities.PowerUp, Objects.Menu's, Toolbox, Config, Animation
  default-language:    Haskell2010